# xterm256-converter

./: Cargo.toml  LICENSE  README.md
examples/print_to_console/: main.rs
examples/save_to_disk/: main.rs
src/: colors.rs  lib.rs  main.rs
